--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -10,4 +10,7 @@ build:
 deploy:
   kubectl:
     manifests:
-    - k8s.yaml
+    #- k8s-pod.yaml
+    #- k8s-all.yaml
+    #- k8s.yaml
+    - k8s-k3d.yaml
