Fuck it, YOLO! (C) whatthecommit.com

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,7 +6,9 @@ build:
   artifacts:
     - image: daggerok/boot-skaffold
       context: .
-      jib: {}
+      jib:
+        args:
+          - -e
 deploy:
   kubectl:
     manifests:
