--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ env:
 jobs:
   include:
     - stage: test
-      name: k3d
+      name: k3d kubectl
       jdk: openjdk11
       script:
         - cd $TRAVIS_BUILD_DIR
@@ -72,12 +72,14 @@ jobs:
         - mv ./kubectl ~/.local/bin/
         - kubectl cluster-info
         - kubectl get pods --all-namespaces
+        #
         #- curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64
         #- chmod +x skaffold
         #- mv skaffold ~/.local/bin/
         #- ./mvnw clean compile jib:dockerBuild
         #- skaffold --images daggerok/boot-skaffold
         #- skaffold dev &
+        #
         - kubectl get pods -o wide -w &
         - kubectl apply -f k8s-k3d.yaml
         - sleep 1m
@@ -89,6 +91,7 @@ jobs:
         - kubectl logs deployment/boot-skaffold-deployment --follow &
         - http :/
         - http :/
+        #
         - kubectl delete -f k8s-k3d.yaml
         - k3d stop --name=k3d
         - docker rm -f -v `docker ps -a -q`
