removed tests since i can't make them green (C) whatthecommit.com

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,6 +7,7 @@ build:
     - image: daggerok/boot-skaffold
       context: .
       jib:
+        type: maven
         args:
           - -e
 deploy:
